Details
-
Bug
-
Resolution: Fixed
-
Critical
Description
I just got a BSOD 0x1E due to uncaught exception from freetype.
Reproduction steps
-build with the two patches from here to bypass CORE-11537
-Install Gecko 2.40 from rapps
-Install Samba 1.3 from rapps
-Reboot
-Install 'QIP 2005 8095', e.g. from https://winfuture.de/downloadvorschalt,1661.html
-Run QIP main app
It will pass the splashscreen and afterwards you will get the freetype BSOD 0x1E
at this screen: 0.4.12-RC-20-ga112b89__QIP_freetype_BSOD.png
0.4.12-RC-20-ga112b89__QIP_freetype_BSOD.log
Attachments
Issue Links
- relates to
-
CORE-15838 gdi/ntgdi/freetype.c should not use cos/sin
-
- Untriaged
-