[0.4.12] [WIN32SS][NTGDI] Fix regression BSOD in QIP CORE-16059 and similar BSODs by avoiding FLOAT in kernel

This is a squashed backmerge of
PR1572 FLOAT in IntEscapeMatrix
0.4.13-dev-255-g
01370964495a0769edafb76a06e7b5a81374c1fc

PR1574 FLOAT for orientation
0.4.13-dev-257-g
fabbd7c1c162dc4dec8a23f8470cafb8871d4675

PR1576 FLOAT in ftGdiGetGlyphOutline
0.4.13-dev-270-g
86046a9bf4af57551308331631447c7ccfa87fe9

Those 3 commits were part of CORE-15838.
All those regressions have been introduced during 0.4.12-dev'ing.